Using var instead of declare specific type